Edited blogs, index links

--- a/blog-posts/week8_cultural_blog.html
+++ b/blog-posts/week8_cultural_blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Justin Wagner Week 1 Technical Blog</title>
+		<title>Justin Wagner Week 8 Cultural Blog</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700,400italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700,400italic' rel='stylesheet' type='text/css'>
@@ -11,34 +11,19 @@
 	<body>
 		<div id="container" align="center">
 			<div id="header">
-				<h1>Tech Blog</h1>
+				<h1>Cultural Blog</h1>
 				<p>Justin W</p>
 			</div>
 			
 			<div id="sub-content">
-				<h2>Week 1</h2>
-				<h5>June 21, 2014</h5>
+				<h2>Week 8</h2>
+				<h5>July 6, 2014</h5>
 				<article>
-					<p>In this blog post, I'll be talking about my three favorite websites. The sites I picked were chosen due to their creativity, usability and design. Take a look!</p><hr>
+					<p>This blog post talks about how to deal with conflict.</p><hr>
 				</article>
 				<article>
-					<div class="column1">
-					<h3>Twitter</h3>
-					
-					</div>
-					<div class="column2">
-					<p></p>
-					</div>
-					<div class="column1">
-					<h3>YouTube</h3>
-					</div>
-					<div class="column2">
-					<p></p></div>
-					<div class="column1">
-					<h3>Be Moved - Sony</h3>
-					</div>
-					<div class="column2">
-					<p></p><div>
+					<h3>Conflict</h3>
+					<p>I'm generally a very easy going guy who gets along well with my friends. So thinking of a conflict is kind of hard for me, but of course there have been times where I had butt heads with someone. However one time stands out to me because something slightly out of the ordinary had happened. I had a friend who had always been a trouble maker, and after a few years of friendship, one day he ended up stealing money from me and a few friends of mine. It was a harmless amount of money that he stole, but we knew that we couldn't quite trust him the same after that. The source of the conflict therefore was this negative energy that grew between my friends and I, and this other friend of ours. What ended up happening however was some of my friends ended up getting anxious and fed up after we tried calling him for a few weeks. When he didn't respond, eventually my friends decided to drive to his house and knock on his door. I came along and witnessed this, and our old friend was not happy at all that several of us came together to talk to him. He ended up fighting a friend of mine, and when the rest of us tried to seperate them, his family came outside and started yelling. I knew this was all a big mistake, and got in my car and left the scene, after grabbing my friends. I handled the conflict by going along with the group and confronting this person in an almost agressive fashion. It ended up just making things worse, since we were only able to get a little bit of our money back, but the tension grew, and we haven't spoken to him since. If I could go back, I would not have gone to his door, but have been patient, and if he had not answered, I would have tried to handle it differently. Worrying his family was not my attention, and I learned from this experience that sometimes it's not worth it to confront somebody when you know that in the end, you will most likely not gain back their friendship. I am going to use this knowledge in the future. Whenever I am having a conflict with somebody, especially in the workplace, I will try and talk to them one on one quietly so we become on the same page, rather than in an aggressive fashion.</p>
 				</article>
 			</div>
 			<div id="footer">
