--- a/blog-posts/week8_technical.html
+++ b/blog-posts/week8_technical.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Justin Wagner Week 1 Technical Blog</title>
+		<title>Justin Wagner Week 8 Technical Blog</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700,400italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700,400italic' rel='stylesheet' type='text/css'>
@@ -16,29 +16,27 @@
 			</div>
 			
 			<div id="sub-content">
-				<h2>Week 1</h2>
-				<h5>June 21, 2014</h5>
+				<h2>Week 8</h2>
+				<h5>July 6, 2014</h5>
 				<article>
-					<p>In this blog post, I'll be talking about my three favorite websites. The sites I picked were chosen due to their creativity, usability and design. Take a look!</p><hr>
+					<p>In this blog post I will explain what Ruby on Rails is.</p><hr>
 				</article>
 				<article>
 					<div class="column1">
-					<h3>Twitter</h3>
-					
+					<h3>Rails</h3>
+					<img src="images/rails.png"/>
 					</div>
 					<div class="column2">
-					<p></p>
+					<p>Ruby on Rails is something I constantly hear about when looking up web development. It is a web application framework, which runs through Ruby and is open source. Rails is a full-stack framework, which gathers libraries useful for the developer, talks to the database, and renders templates. Rails uses the <b>model-view-controller (MVC)</b> pattern in order to organize application programming. A model will typically map to a table in a database and a Ruby file. A controller responds to external requests from the web server to the application. A <b>view</b> in Ruby is an <i>erb</i> file, compiled to HTML at run-time. Rails also includes things to make tasks easier such as scaffolding, and can be integrated with other gems to provide a great development environment. Ruby also uses JavaScript libraries <b>Prototype</b> and Script.aculo.us for Ajax. Rails is seperated into different packages, including ActiveRecord which is a system for database access, ActiveResources which provides web services, ActionPack, ActiveSupport, and ActionMailer. Being open source, many people make plugins as well. Rails can be installed using RubyGems, a package manager, and deployed with a database server and a web server.</p>
 					</div>
 					<div class="column1">
-					<h3>YouTube</h3>
+					<h3>History / Philosophies</h3>
 					</div>
 					<div class="column2">
-					<p></p></div>
-					<div class="column1">
-					<h3>Be Moved - Sony</h3>
+					<p>In July 2004, David Heinemeier Hansson released Rails as an open source, and shared commit rights 7 months later. In August 2006, Apple announced that it would ship Ruby on Rails with their OS, Leopard. This was a huge landmark for Rails. In March 2009, Rails version 2.3 was released with major developments, affecting templates and reusing application pieces. The latest version is 4.1, released just in April 8 of this year. Many things have been added such as Turbolinks, Live Streaming, and things like jQuery as default JavaScript library, and making the development mode faster.</p>
+
+					<p>Throughout time however, Rails has maintained certain design principles that are emphasized. Convention over Configuration is one, where when naming classes and their corresponding tables, you should typically use the same name even if it doesn't sound right. Also DRY (Don't repeat yourself) is a big principle that is followed, making the code as clean as possible. Another thing that should be followed is putting most of the logic into the model rather than the controller.</p>
 					</div>
-					<div class="column2">
-					<p></p><div>
 				</article>
 			</div>
 			<div id="footer">
