Week9 Cultural blog, index links/css

--- a/unit1_projects/blog_template.html
+++ b/unit1_projects/blog_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Justin Wagner Week 1 Technical Blog</title>
+		<title>Justin Wagner Week 9 Cultural Blog</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700,400italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700,400italic' rel='stylesheet' type='text/css'>
@@ -11,15 +11,15 @@
 	<body>
 		<div id="container" align="center">
 			<div id="header">
-				<h1>Tech Blog</h1>
+				<h1>Cultural Blog</h1>
 				<p>Justin W</p>
 			</div>
 			
 			<div id="sub-content">
-				<h2>Week 1</h2>
-				<h5>June 21, 2014</h5>
+				<h2>Week 9</h2>
+				<h5>July 13, 2014</h5>
 				<article>
-					<p>In this blog post, I'll be talking about my three favorite websites. The sites I picked were chosen due to their creativity, usability and design. Take a look!</p><hr>
+					<p>This blog post is about asking questions, and what makes a good question.</p><hr>
 				</article>
 				<article>
 					<div class="column1">
