--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
 		<li><a href="http://jwag789.github.io/blog-posts/week8_cultural_blog.html">Cultural Blog</li>
 	</ul>
 </article>
+<article>
+	<h1>Week9</h1>
+	<ul>
+		<li><a href="http://jwag789.github.io/blog-posts/week9_cultural_blog.html">Cultural Blog</li>
+	</ul>
+</article>
 	</nav>
 	<footer>
 		<a name="contact"></a>
