--- a/unit3_cheatsheet.html
+++ b/unit3_cheatsheet.html
@@ -1,123 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Justin's Dev Bootcamp Index</title>
+	<title>HTML Cheat Sheet</title>
 <link rel='stylesheet' type='text/css' href='unit1_projects/stylesheets/unit3_cheatsheet.css'>
 <link href='http://fonts.googleapis.com/css?family=Paytone+One' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
 <link href="unit1_projects/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-	<div class="links">
+	<nav>
 		<ul>
-			<li>Justin Wagner</li>
-			<li><a href="#link">Links</a></li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="#general">General tags</a></li>
+			<li><a href="#formatting">Formatting</a></li>
+			<li><a href="#links">Links</a></li>
+			<li><a href="#images">Images</a></li>
 		</ul>
-	</div>
+	</nav>
 	<div id="container">
 	
-	<div class="subheader welcome1">
-		<h1>Welcome</h1>
-	</div>
-	<div class="subheader welcome2">
-		<h1>Welcome</h1>
-	</div>
-	<div class="subheader welcome3">
-		<h1>Welcome</h1>
-	</div>
-	<div class="subheader welcome4">
-		<h1>Welcome</h1>
-	</div><br/><br/><br/><br/>
-<center><span style="color:#E64D62"><i class="fa fa-fire fa-5x"></i></span></center>
-	</div>
-
-	<nav>
-		<a name="link"></a>
-		<div id="navwrapper">
-		<article>
-
-			<h1>Week 1</h1>
-			<ul>
-			<li><a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></li>
-	<li><a href="http://jwag789.github.io/blog-posts/week1_technical_blog.html">Technical Blog</a></li>
-	<li><a href="http://jwag789.github.io/blog-posts/week1_cultural_blog.html">Cultural Blog</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a></li></ul>
-</article>
-	<article>
-			<h1>Week 2</h1>
-			<ul>
-			<li><a href="http://jwag789.github.io/blog-posts/week2_technical.html">Technical Blog</li>
-			<li><a href="http://jwag789.github.io/unit1_projects/my_wireframe.html">Index Wireframe</a></li>
-	</ul>
-</article>
-<article>
-	<h1>Week3</h1>
-	<ul>
-		<li><a href="http://jwag789.github.io/blog-posts/week3_technical.html">Technical Blog</li>
-		<li><a href="http://jwag789.github.io/blog-posts/week3_cultural.html">Cultural Blog</li>
-		<li><a href="http://jwag789.github.io/unit1_projects/dragonhorn.html" target="_blank">JavaScript Challenge</li>
-	</ul>
-</article>
-<article>
-	<h1>Week4</h1>
-	<ul>
-		<li><a href="http://jwag789.github.io/blog-posts/week4_technical.html">Technical Blog</li>
-		<li><a href="http://jwag789.github.io/blog-posts/week4_cultural_blog.html">Cultural Blog</li>
-	</ul>
-</article>
-<article>
-	<h1>Week5</h1>
-	<ul>
-		<li><a href="http://jwag789.github.io/blog-posts/week5_technical.html">Technical Blog</li>
-		<li><a href="http://jwag789.github.io/blog-posts/week5_cultural.html">Cultural Blog</li>
-	</ul>
-</article>
-<article>
-	<h1>Week6</h1>
-	<ul>
-		<li><a href="http://jwag789.github.io/blog-posts/week6_technical.html">Technical Blog</li>
-		<li><a href="http://jwag789.github.io/blog-posts/week6_cultural_blog.html">Cultural Blog</li>
-	</ul>
-</article>
-<article>
-	<h1>Week7</h1>
-	<ul>
-		<li><a href="http://jwag789.github.io/blog-posts/week7_technical.html">Technical Blog</li>
-		<li><a href="http://jwag789.github.io/blog-posts/week7_cultural.html">Cultural Blog</li>
-	</ul>
-</article>
-<article>
-	<h1>Week8</h1>
-	<ul>
-		<li><a href="http://jwag789.github.io/blog-posts/week8_technical.html">Technical Blog</li>
-		<li><a href="http://jwag789.github.io/blog-posts/week8_cultural_blog.html">Cultural Blog</li>
-	</ul>
-</article>
-<article>
-	<h1>Week9</h1>
-	<ul>
-		<li><a href="http://jwag789.github.io/blog-posts/week9_cultural_blog.html">Cultural Blog</li>
-	</ul>
-</article>
-	</nav>
-	<footer>
-		<a name="contact"></a>
-		<div id="contactwrapper">
-			<div id="contactleft">
-			<h1>CONTACT ME</h1>
-			<p>Feel Free to contact me any time!</p>
-			</div>
-			<div id="contactright">
-				<a href="http://github.com/jwag789" target="_blank"><i class="fa fa-github-alt fa-5x"></i></a>
-				<a href="http://www.twitter.com/jwag789" target="_blank"><i class="fa fa-twitter fa-5x"></i></a>
-				<a href="http://www.facebook.com/justinchrono" target="_blank"><i class="fa fa-facebook-square fa-5x"></i></a>
-				<a href="https://www.linkedin.com/profile/view?id=196850623" target="_blank"><i class="fa fa-linkedin fa-5x"></i></a>
-				<a href="https://plus.google.com/u/0/111848734630705394847/" target="_blank"><i class="fa fa-google-plus fa-5x"></i></a>
-				<a href="mailto:jwag789@gmail.com"><i class="fa fa-envelope fa-5x"></i></a>
-			</div>	
+	<div id="center">
+		<h1>HTML Cheat Sheet</h1>
+	<br/><br/><br/><br/>
+	<a id="general"></a>
+		<h2>Doctype</h2><br/><br/>
+		<p>&#60;!DOCTYPE html&#62;</p><br/><br/>
+		<h2>HTML Tag</h2><br/><br/>
+		<p>&#60;html&#62;&#60;/html&#62;</p><br/><br/>
+		<p>Creates an HTML document</p><br/><br/>
+		<h2>Header Tag</h2><br/><br/>
+		<p>&#60;head&#62;&#60;/head&#62;</p><br/><br/>
+		<p>Sets title, links to CSS and other files etc.</p><br/><br/>
+		<h2>Body Tag</h2><br/><br/>
+		<p>&#60;body&#62;&#60;/body&#62;</p><br/><br/>
+		<p>Sets visible portion of document</p><br/><br/>
+		<h2>Title Tag</h2><br/><br/>
+		<p>&#60;title&#62;&#60;/title&#62;</p><br/><br/>
+		<p>Sets document title</p><br/><br/>
+		<a id="formatting"></a>
+		<h2>Header tags</h2><br/><br/>
+		<p>&#60;h1&#62;&#60;/h1&#62;</p><br/><br/>
+		<p>&#60;h6&#62;&#60;/h6&#62;</p><br/><br/>
+		<p>Header tags 1-6, 1 being the largest, 6 the smallest</p><br/><br/>
+		<h2>Paragraph text</h2><br/><br/>
+		<p>&#60;p&#62;&#60;/p&#62;</p><br/><br/>
+		<h2>Paragraph align</h2><br/><br/>
+		<p>&#60;p align=?&#62;&#60;/p&#62;</p><br/><br/>
+		<p>Align to left, right, or center</p><br/><br/>
+		<h2>Bold Text</h2><br/><br/>
+		<p>&#60;b&#62;&#60;/b&#62;</p><br/><br/>
+		<h2>Italic Text</h2><br/><br/>
+		<p>&#60;i&#62;&#60;/i&#62;</p><br/><br/>
+		<h2>Line break</h2><br/><br/>
+		<p>&#60;br&#62;</p><br/><br/>	
+		<h2>Font Size/Color</h2><br/><br/>
+		<p>&#60;font size=?&#62;&#60;/font&#62;</p><br/><br/>
+		<p>&#60;font color=?&#62;&#60;/font&#62;</p><br/><br/>
+		<a id="links"></a>
+		<h2>Create a link</h2><br/><br/>
+		<p>&#60;a href="URL"&#62;&#60;/a&#62;</p><br/><br/>
+		<h2>Mail link</h2><br/><br/>
+		<p>&#60;a href="mailto:EMAIL&#62;&#60;/a&#62;</p><br/><br/>
+		<a id="images"></a>
+		<h2>Add image</h2><br/><br/>
+		<p>&#60;img src="name"&#62;</p><br/><br/>
 		</div>
-	</footer>
+	</div>
+
+	
+
 </body>
 </html>
